--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 services:
   web:
     build:
-      context: ./contacts_api
+      context: .
       dockerfile: Dockerfile
     container_name: fastapi_app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn contacts_api.app.main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
     depends_on:
       - db
     environment:
       DATABASE_URL: postgresql+psycopg2://admin:admin123@db:5432/contacts_db
+      DEBUG: "True"
 
   db:
     image: postgres:15
